--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
                 volumes:
                         - "./deploy/meshcentral-data:/srv/meshcentral2/meshcentral-data"
                         - "./deploy/meshcentral-files:/srv/meshcentral2/meshcentral-files"
+                env_file:
+                        - "./deploy/meshcentral.env"
                 ports: 
                         - "80:80"
                         - "443:443"
@@ -24,10 +26,6 @@ services:
                         - "./deploy/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d"
                         - "./deploy/mongodb-data:/data/db"
                         - "./deploy/mongodb-config:/data/configdb"
-                environment:
-                        - "MONGO_INITDB_DATABASE=meshcentral"
-                        - "MONGO_NON_ROOT_USERNAME=meshcentral"
-                        - "MONGO_NON_ROOT_PASSWORD=hunter2"
-                        - "MONGO_INITDB_ROOT_USERNAME=root"
-                        - "MONGO_INITDB_ROOT_PASSWORD=hunter2"
+                env_file:
+                        - "./deploy/mongodb.env"
 
