--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -27,7 +27,7 @@ jobs:
 
     - bash: |
         set -Eeuo pipefail
-        docker build -t "$(DOCKER_IMAGE_TAG)"
+        docker build -t "$(DOCKER_IMAGE_TAG)" .
         docker images --digests "$(DOCKER_IMAGE_TAG)"
       displayName: "Build image"
 
