fix latest image tag

--- a/.github/workflows/container-image-publish.yml
+++ b/.github/workflows/container-image-publish.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           images: docker.io/jamesits/meshcentral2
           tags: |
+            type=edge,branch=master
             type=semver,pattern={{version}}
       - uses: docker/build-push-action@v6
         with:
