--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "4433:4433"
 
   mongo:
-    image: "mongo:4"
+    image: "docker.io/library/mongo:8"
     command: "--serviceExecutor adaptive"
     restart: "unless-stopped"
     volumes:
