--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
 	"dependencies": {
 		"@crowdsec/express-bouncer": "0.1.0",
+		"@duosecurity/duo_universal": "^2.0.3",
 		"@mysql/xdevapi": "8.0.33",
+		"@sendgrid/mail": "^8.1.4",
 		"@xmpp/client": "0.13.1",
 		"acebase": "1.29.5",
 		"acme-client": "4.2.5",
 		"aedes": "0.39.0",
 		"archiver-zip-encrypted": "2.0.0",
+		"discord.js": "14.6.0",
 		"esprima": "4.0.1",
 		"firebase-admin": "12.7.0",
 		"googleapis": "128.0.0",
@@ -16,6 +19,7 @@
 		"image-size": "1.1.1",
 		"input": "1.0.1",
 		"jsdom": "22.1.0",
+		"jwt-simple": "^0.5.6",
 		"ldapauth-fork": "5.0.5",
 		"loadavg-windows": "1.1.1",
 		"mariadb": "3.4.0",
@@ -30,14 +34,22 @@
 		"node-vault": "0.10.2",
 		"node-windows": "0.1.14",
 		"nodemailer": "6.9.16",
+		"openid-client": "5.7.1",
 		"otplib": "10.2.3",
+		"passport-azure-oauth2": "^0.1.0",
+		"passport-github2": "^0.1.12",
+		"passport-google-oauth20": "^2.0.0",
+		"passport-saml": "^3.2.4",
+		"passport-twitter": "^1.0.4",
 		"pg": "8.13.1",
 		"plivo": "4.58.0",
+		"prom-client": "^15.1.3",
 		"saslprep": "1.0.3",
 		"semver": "7.5.4",
 		"sqlite3": "5.1.7",
 		"ssh2": "1.16.0",
 		"svg-captcha": "1.4.0",
+		"syslog": "0.1.1-1",
 		"telegram": "2.19.8",
 		"telnyx": "1.25.5",
 		"twilio": "4.19.0",
