--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"acme-client": "4.2.5",
 		"aedes": "0.39.0",
 		"archiver-zip-encrypted": "2.0.0",
+		"connect-flash": "^0.1.1",
 		"discord.js": "14.6.0",
 		"esprima": "4.0.1",
 		"firebase-admin": "12.7.0",
@@ -36,6 +37,7 @@
 		"nodemailer": "6.9.16",
 		"openid-client": "5.7.1",
 		"otplib": "10.2.3",
+		"passport": "^0.7.0",
 		"passport-azure-oauth2": "^0.1.0",
 		"passport-github2": "^0.1.12",
 		"passport-google-oauth20": "^2.0.0",
