--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
 		"@crowdsec/express-bouncer": "0.1.0",
 		"@duosecurity/duo_universal": "^2.0.3",
 		"@mysql/xdevapi": "8.0.33",
+		"@seald-io/nedb": "^4.0.4",
 		"@sendgrid/mail": "^8.1.4",
 		"@xmpp/client": "0.13.1",
 		"acebase": "1.29.5",
 		"acme-client": "4.2.5",
 		"aedes": "0.39.0",
+		"archiver": "7.0.1",
 		"archiver-zip-encrypted": "2.0.0",
+		"body-parser": "1.20.3",
+		"cbor": "5.2.0",
+		"compression": "1.7.5",
 		"connect-flash": "^0.1.1",
+		"cookie-session": "2.1.0",
 		"discord.js": "14.6.0",
 		"esprima": "4.0.1",
+		"express": "4.21.2",
+		"express-handlebars": "7.1.3",
+		"express-ws": "5.0.2",
 		"firebase-admin": "12.7.0",
 		"googleapis": "128.0.0",
 		"heapdump": "0.3.15",
@@ -19,17 +28,21 @@
 		"https-proxy-agent": "7.0.2",
 		"image-size": "1.1.1",
 		"input": "1.0.1",
+		"ipcheck": "0.1.0",
 		"jsdom": "22.1.0",
 		"jwt-simple": "^0.5.6",
 		"ldapauth-fork": "5.0.5",
 		"loadavg-windows": "1.1.1",
 		"mariadb": "3.4.0",
 		"meshcentral": "1.1.42",
+		"minimist": "1.2.8",
 		"minio": "8.0.2",
 		"modern-syslog": "1.2.0",
 		"mongodb": "4.13.0",
 		"mongojs": "3.1.0",
+		"multiparty": "4.2.3",
 		"mysql2": "3.11.4",
+		"node-forge": "1.3.1",
 		"node-pushover": "1.0.0",
 		"node-sspi": "0.2.10",
 		"node-vault": "0.10.2",
@@ -55,9 +68,12 @@
 		"telegram": "2.19.8",
 		"telnyx": "1.25.5",
 		"twilio": "4.19.0",
+		"ua-parser-js": "1.0.39",
 		"web-push": "3.6.6",
 		"webdav": "4.11.4",
 		"wildleek": "2.0.0",
+		"ws": "8.18.0",
+		"yauzl": "2.10.0",
 		"yubikeyotp": "0.2.0",
 		"zulip": "0.1.0"
 	},
