--- a/package.json
+++ b/package.json
@@ -49,18 +49,18 @@
 		"node-windows": "0.1.14",
 		"nodemailer": "6.9.16",
 		"openid-client": "5.7.1",
-		"otplib": "10.2.3",
+		"otplib": "12.0.1",
 		"passport": "^0.7.0",
 		"passport-azure-oauth2": "^0.1.0",
 		"passport-github2": "^0.1.12",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-saml": "^3.2.4",
 		"passport-twitter": "^1.0.4",
-		"pg": "8.13.1",
+		"pg": "8.14.1",
 		"plivo": "4.58.0",
 		"prom-client": "^15.1.3",
 		"saslprep": "1.0.3",
-		"semver": "7.5.4",
+		"semver": "7.7.1",
 		"sqlite3": "5.1.7",
 		"ssh2": "1.16.0",
 		"svg-captcha": "1.4.0",
@@ -68,7 +68,8 @@
 		"telegram": "2.19.8",
 		"telnyx": "1.25.5",
 		"twilio": "4.19.0",
-		"ua-parser-js": "1.0.39",
+		"ua-client-hints-js": "0.1.2",
+		"ua-parser-js": "1.0.40",
 		"web-push": "3.6.6",
 		"webdav": "4.11.4",
 		"wildleek": "2.0.0",
