--- a/.github/workflows/container-image-publish.yml
+++ b/.github/workflows/container-image-publish.yml
@@ -34,3 +34,5 @@ jobs:
           push: true
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
+          cache-from: type=registry,ref=docker.io/jamesits/meshcentral2:github-actions-cache
+          cache-to: type=registry,ref=docker.io/jamesits/meshcentral2:github-actions-cache,mode=max,compression=zstd
