fix(ci): do not build node-sspi in Docker

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,7 +5,7 @@ onlyBuiltDependencies:
   - es5-ext
   - heapdump
   - modern-syslog
-  - node-sspi
+  # - node-sspi
   - protobufjs
   - sqlite3
   - ssh2
